--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.111.5",
+    "@react-three/fiber": "^8.17.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.20",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^11.3.31",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-input-mask": "^2.0.4",
+    "react-native": "^0.75.2",
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "^5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "tailwindcss": "^3.4.10",
+    "three": "^0.168.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
